Tpm2 review fixes: honest Javadoc, safer CLI, stable wire format, cleaner errors
Addresses every item from the TPM implementation review (Critical, High,
Medium, Low). 12 tests in hardened-tpm2 (10 active + 2 simulator-gated
skips), up from 10. Hardened module regressions: 54/54 pass.

Critical
- Tpm2Provisioner: remove the --password <plaintext> CLI flag. The argv
  was visible in /proc/<pid>/cmdline, ps(1), shell history, auditd, sudo
  logs -- there is no safe way to take a password on the command line.
  New password sources: --password-stdin (read one line), --password-env
  VAR (read from named env var), --password-fd N (read from /dev/fd/N),
  --password-prompt (java.io.Console.readPassword with echoing disabled,
  default on a tty). At most one may be specified; missing source falls
  back to interactive prompt. Usage message lists all four.
- Tpm2KeyMaterialProvider Javadoc: updated the class header's pepper-
  location claim ("at rest on disk" not "anywhere") and the sameUid=REAL
  quote. Added a "Threat coverage (honest)" section that names PARTIAL,
  states why (TPM authenticates secret + PCR, not caller identity), and
  points at the MAC prerequisite for real same-UID defense.
- Tpm2KeyMaterialProviderTest.sealUnsealRoundTripViaSimulator: the stale
  assertEquals(Level.REAL, sameUid) assertion flipped to PARTIAL, with an
  extra assertion that the rationale string mentions "MAC policy".

High
- Tpm2SealedBlob.PolicyKind: explicit wire bytes via new .wire() accessor
  and fromWire(byte) lookup. Serialisation no longer depends on enum
  ordinal(), so reordering or inserting values cannot change the on-disk
  format. PASSWORD=0x01, PCR=0x02.
- Tpm2SealedBlob.writeTo: temp file is now created mode-0600 from the
  outset via PosixFilePermissions.asFileAttribute, closing the brief
  umask window where Files.write created a world-readable file before
  setPermissions fixed it. Non-POSIX filesystems fall through to the
  create-only path.

Medium
- Tpm2KeyMater